--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js server.js",
+  "main": "app.js ",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js node app.js"
+    "start": "nodemon app.js node app.js",
+    "vercel-build": "node app.js"
   },
   "keywords": [],
   "author": "",
